# citro2d-project-template

./: Cargo.toml  README.md  bacon.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
