[package]
name = "citro2d-project-template"
version = "0.1.0"
edition = "2024"

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
citro2d = { git = "https://github.com/fatfingers23/citro3d-rs.git", rev = "34e5981203dd8c76f08b0412b6113520f65e1ca9" }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
